[package]
name = "sapling"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../zexe/algebra", default-features = false }
groth16 = { path = "../zexe/groth16", default-features = false }
