[package]
name = "sapling"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#algebra = { path = "../zexe/algebra", default-features = false }
#groth16 = { path = "../zexe/groth16", default-features = false }

[dependencies.algebra]
git = "https://github.com/scipr-lab/zexe"
rev = "5a7974a73de2557e6a8e8ecfd80b860f7d483602"
default-features = false
features = ["jubjub", "bls12_381"]

[dependencies.groth16]
git = "https://github.com/scipr-lab/zexe"
rev = "5a7974a73de2557e6a8e8ecfd80b860f7d483602"
default-features = false

[dependencies.zexe-redjubjub]
path = "../zexe-redjubjub"
#git = "https://github.com/debris/zexe-redjubjub"
#rev = "6b46dbd0657fba2576ff8c3f56fc1631b44c3d82"
